static/css/style.css
/* ... */
.bucket-list .list-group-item:hover {
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

/*=============== Media Queries ===============*/
@media only screen and (max-width: 1000px) {
    .search-box {
        width: 40% !important
    }

    #profile .profile-img {
        max-width: 200px;
    }
}

@media only screen and (max-width: 930px) {
    .search-box {
        width: 30% !important
    }
}


@media only screen and (max-width: 767px) {
    .logo {
        position: relative;
        transform: none;
        left: auto;
    }

    .navbar-toggler {
        margin: 5px 0 5px 0;
    }

    .search-box {
        width: auto !important;
        padding-top: .2em;
    }

    #profile .profile-img {
        max-width: 250px;
    }
}
}

@media only screen and (max-width: 454px) {
    .carousel-caption {
        text-align: center;
    }

    .hero-content {
        top: 50%;
    }
}

